fix player_service
